--- a/REPLicate.CodeGeneration.ServiceAccessor/REPLicate.CodeGeneration.ServiceAccessor.csproj
+++ b/REPLicate.CodeGeneration.ServiceAccessor/REPLicate.CodeGeneration.ServiceAccessor.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.CodeAnalysis.Scripting" Version="4.6.0" />
+    <ProjectReference Include="../REPLicate.Services/REPLicate.Services.csproj" />
   </ItemGroup>
 
 </Project>
